# aivalon-game

./: .gitignore  LICENSE  pyproject.toml  readme.md
frontend/: PIXEL_STYLE_README.md  README.md  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx  pixel-styles.scss  types.ts
frontend/src/components/: LanguageSwitcher.tsx  NegotiationTable.tsx  SeatConfigScreen.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: en-US.json  zh-CN.json
frontend/src/styles/: SeatConfigScreen.css
src/aivalon/: __init__.py  agents.py  human_player.py  tools.py
src/aivalon/config/: model_registry.py
src/aivalon/core/: __init__.py  analysis.py  context.py  fsm.py  roles.py  rulesets.py  schemas.py  transcript.py
src/aivalon/providers/: __init__.py  dashscope_provider.py  deepseek_provider.py  glm_provider.py  kimi_provider.py  multi_provider.py  openrouter.py  providers.py
src/aivalon/services/: __init__.py  cli.py  web_api.py  web_session.py
src/aivalon/utils/: __init__.py  dotenv_shim.py  leak_filter.py  openai_shim.py  rng.py  structlog_shim.py
